# movie_rating

./: .cz.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  compose.yaml  mkdocs.yml  pyproject.toml
app/: .env.example  .gitignore  Dockerfile  app.py  compose.yaml  mkdocs.yml  pyproject.toml
app/docs/en-US/: architecture.md  authentication.md  database.md
app/docs/pt-BR/: architecture.md  authentication.md  database.md  getting-started.md  index.md
app/migrations/: env.py
app/migrations/versions/: 77d057f5ab5d_create_movies_table.py  87857cbd3ef4_create_users_movies_table.py  a9eaa00b2665_create_users_table.py  d714f8b22b54_create_actors_table.py  e6bbdb39d7b2_add_ondelete_cascade_into_intemediate_.py  f36e0b1515ec_remove_rating_from_movies_actors.py
app/scripts/: load_test.py
app/src/core/: constants.py  database.py  middleware.py  security.py  telemetry.py
app/src/models/: __init__.py  actors.py  movies.py  movies_actors.py  users.py
app/src/repositories/: actors.py  movies.py  users.py
app/src/routers/: actors.py  auth.py  movies.py  users.py
app/src/schemas/: common.py  movies.py
app/tests/: conftest.py  test_actors.py  test_auth.py  test_movies.py
docker/tempo/: tempo.yaml
docs/en-US/: api-reference.md  getting-started.md  index.md
docs/pt-BR/: api-reference.md
docs/stylesheets/: extra.css
k8s/: helmfile.yaml.gotmpl  startup-cluster.sh
k8s/app/: app.yaml  database.yaml  migrations.yaml  namespace.yaml
k8s/goldilocks/: README.md  values.yaml
k8s/kind/: config.yaml
k8s/kind/kong/: values.yaml
k8s/movie-rating/: Chart.yaml  values.yaml
k8s/movie-rating/templates/: NOTES.txt  _helpers.tpl  app.yaml  migrations.yaml  secrets.yaml
k8s/values/: goldilocks.yaml  kong.yaml
migrations/versions/: 2c97d16346e1_change_name_fields_to_unique.py  9315c15ffd99_add_release_date_into_movies.py  f8a59e4233fa_create_movies_actors_table.py
observability/: compose.yaml  loki.yaml  mimir.yaml  otel-collector.yaml
observability/grafana/: dashboards.yaml  datasources.yaml
observability/grafana-dashboards/: logs.json  metrics.json
observability/grafana/dashboards/: logs.json
scripts/: latency_sim.py
src/core/: database.py  metrics.py  middleware.py  settings.py  telemetry.py
src/models/: actors.py  movies.py  movies_actors.py  users.py  users_movies.py
src/repositories/: actors.py  movies.py  users.py
src/routers/: actors.py  movies.py  users.py
src/schemas/: actors.py  auth.py  common.py  movies.py  users.py
src/services/: actors.py  auth.py  movies.py  users.py
tests/: conftest.py  test_actors.py  test_movies.py  test_users.py
